--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,3 +1,35 @@
 footer {
-    height: 50vh;
+  text-align: center;
+  padding: 80px 10px;
+  h3 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+  }
+  p {
+    padding: 5px 0;
+  }
+}
+
+@media (max-width: 1000px) {
+  footer {
+    padding: 40px 15px;
+    h3 {
+      font-size: 1rem;
+    }
+    p {
+      padding: 3px 0;
+      font-size: 0.8rem;
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  footer {
+    h3 {
+      font-size: 0.9rem;
+    }
+    p {
+      margin-bottom: 0px;
+    }
+  }
 }
