--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,22 +1,60 @@
 header {
-    height: 100vh;
+  height: 100vh;
+  min-height: 900px;
+  width: 100%;
+  background-image: url("../img/header_background.jpg");
+  font-family: "Anton", sans-serif;
+
+  margin: auto;
+  background-position: 0 30%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  position: relative;
+
+  &::after {
+    content: "";
+    background-color: white;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 80px;
     width: 100%;
-    background-image: url("../img/header_background.jpg");
-    background-position: 0 30%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+  }
+
+  div {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+
+    background-color: rgba($color: #000000, $alpha: 0.3);
+  }
+
+  h1 {
     position: relative;
+    top: 25%;
+    font-family: "Righteous", cursive;
+    font-size: 13vh;
+  }
+}
 
+.first-line {
+  color: white;
+  left: 10%;
+}
+.second-line {
+  color: #abdf27;
+  left: 15%;
+}
+
+@media (max-width: 1000px) {
+  header {
     &::after {
-        content: '';
-        background-color: white;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        height: 120px;
-        width: 100%;
-        clip-path: polygon(0 0, 0 100%, 100% 100%);
+      height: 60px;
     }
-
+  }
 }
