--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -1,56 +1,106 @@
-nav {
+//mobile
+@media (max-width: 1000px) {
+  .nav--active {
+    //border: 1px solid red;
+    position: fixed;
+    top: 0;
+
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+    visibility: visible;
+
+    background-color: rgba(0, 0, 0, 0.61);
+
+    display: flex;
+
+    //transition: visibility 0s, opacity 0.5s linear;
+
+    align-items: center;
+    justify-content: center;
+
+    ul {
+      list-style: none;
+      li {
+        //border: 1px solid green;
+        //width: 300px;
+        margin-bottom: 60px;
+        text-align: center;
+
+        img {
+          display: none;
+        }
+        a {
+          text-decoration: none;
+          font-size: 1em;
+          margin: 0px 30px;
+          padding: 5px 15px;
+          background-color: transparent;
+          color: white !important;
+          transition: 0.5s;
+          font-family: "Montserrat", sans-serif;
+          border: none;
+          border-bottom: 1px solid transparent;
+          text-transform: uppercase;
+
+          &:hover {
+            cursor: pointer;
+            border-bottom: 1px solid white;
+          }
+        }
+      }
+    }
+  }
+  .navigation {
+    display: none;
+  }
+}
+
+//desktop
+@media (min-width: 1000px) {
+  .navigation {
+    visibility: visible;
     position: fixed;
     top: 0;
     right: 0;
     background-color: transparent;
     z-index: 1;
     width: 100%;
+
     // background-color: rgba(0, 0, 0, 0.4);
     background-color: $section-color;
 
-
-
-
-
     ul {
+      display: flex;
+      flex-direction: row;
+      list-style: none;
+      padding: 15px 0;
+      justify-content: center;
+      margin-bottom: 0px;
+      // margin-left: 5%;
 
-        display: flex;
-        flex-direction: row;
-        list-style: none;
-        padding: 15px 0;
-        justify-content: center;
-        // margin-left: 5%;
+      .logo {
+        height: 20px;
+      }
 
-        .logo {
-            height: 20px;
+      li a {
+        text-decoration: none;
+        font-size: 1em;
+        margin: 0px 30px;
+        padding: 5px 15px;
+        background-color: transparent;
+        color: white !important;
+        transition: 0.5s;
+        font-family: "Montserrat", sans-serif;
+        border: none;
+        border-bottom: 1px solid transparent;
+        text-transform: uppercase;
 
+        &:hover {
+          cursor: pointer;
+          border-bottom: 1px solid white;
         }
-
-
-
-
-
-
-        li a {
-            text-decoration: none;
-            font-size: 1em;
-            margin: 0px 30px;
-            padding: 5px 15px;
-            background-color: transparent;
-            color: white;
-            transition: .5s;
-            font-family: 'Montserrat', sans-serif;
-            border: none;
-            border-bottom: 1px solid transparent;
-            text-transform: uppercase;
-
-
-            &:hover {
-                cursor: pointer;
-                border-bottom: 1px solid white;
-
-            }
-
-        }
+      }
     }
+  }
 }
