--- a/css/_product.scss
+++ b/css/_product.scss
@@ -1,8 +1,73 @@
 .product {
-    height: 100vh;
-    // transform: skew(0, 10deg);
-    background-color: #fff;
+  position: relative;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 100px 0;
 
+  img {
+    height: 500px;
 
+    margin-top: 40px;
+    margin-bottom: 20px;
+  }
 
+  .text-wrapper {
+    width: 50%;
+    padding: 30px;
+    font-size: 1.3rem;
+    line-height: 1.8rem;
+
+    color: $section-color;
+    text-align: justify;
+    margin: 10px 0;
+
+    h1 {
+      margin: 25px;
+      font-size: 5.5rem;
+      text-align: center;
+      margin-bottom: 50px;
+    }
+  }
+}
+
+@media (max-width: 1400px) {
+  .product {
+    padding: 20px 0;
+    img {
+      height: 400px;
+      margin-top: 100px;
+    }
+
+    .text-wrapper {
+      font-size: 1.2rem;
+      h1 {
+        font-size: 4.5rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .product {
+    flex-direction: column;
+
+    img {
+      height: 300px;
+      width: 300px;
+
+      margin: auto;
+    }
+
+    .text-wrapper {
+      width: 100%;
+      font-size: 1rem;
+      line-height: 1.5rem;
+      margin: 0px;
+      h1 {
+        font-size: 2.5rem;
+        margin: 20px;
+      }
+    }
+  }
 }
