--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,10 +1,13 @@
-@import 'variables';
-@import 'reset';
-@import 'body';
-@import 'nav';
-@import 'header';
-@import 'product';
-@import 'technical-data';
-@import 'order';
-@import 'contact';
-@import 'footer';
+@import "variables";
+@import "loader";
+@import "reset";
+@import "body";
+@import "nav";
+@import "header";
+@import "product";
+@import "download";
+@import "technical-data";
+@import "contact";
+@import "footer";
+@import "logo-mobile";
+@import "hamburger";
